cluster/projects/clavis/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: clavis
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9000
  selector:
    app: clavis
