cluster/projects/clavis/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clavis-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-force-host: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: www.fortepiano-unterricht.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clavis
                port:
                  number: 80
